public/stylesheets/compiled/homepage.css
/* ... */
/* line 42, ../../../app/stylesheets/homepage.scss */
strong {
  font-weight: bolder;
}

/* line 47, ../../../app/stylesheets/homepage.scss */
h1#main_title {
  text-indent: -9990px;
  margin-top: -50px;
  height: 0;
  /* keep consistent baseline */
}

/* line 52, ../../../app/stylesheets/homepage.scss */
.homepage #container {
  padding: 16px auto 0;
}

/* line 55, ../../../app/stylesheets/homepage.scss */
h2.moto {
  font-size: 26px;
  color: #7bb3cf  !important;
  font-weight: normal;
  text-shadow: black 0 1px 1px;
}
/* line 60, ../../../app/stylesheets/homepage.scss */
h2.moto strong {
  color: #7bb3cf  !important;
}

/* line 65, ../../../app/stylesheets/homepage.scss */
.homepage h3 {
  font-size: 24px;
  padding: 45px 0;
  text-align: left;
  margin: 0;
  background: transparent url('/images/homepage/home-separator.png?1319722016') center top no-repeat;
  color: #828282  !important;
}
/* line 73, ../../../app/stylesheets/homepage.scss */
.homepage h4 {
  color: #f5bd14  !important;
  text-shadow: black 0 1px 1px !important;
  margin-bottom: 9px !important;
}

/* line 78, ../../../app/stylesheets/homepage.scss */
#music_notes {
  background: transparent url("/images/homepage/music-notes.png") center -40px repeat-x;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: absolute;
  z-index: 0;
  -webkit-animation: opacity 4s;
  -moz-animation: opacity 4s;
  -webkit-animation: slidingFromLeft 4s;
}

/* line 93, ../../../app/stylesheets/homepage.scss */
.homepage.logged_out #inner_content {
  padding: 0;
}

/* line 96, ../../../app/stylesheets/homepage.scss */
#inner_halo {
  position: relative;
  background: transparent url("/images/homepage/halo.png") center bottom no-repeat;
}

/* line 100, ../../../app/stylesheets/homepage.scss */
#main {
  text-align: center;
  padding: 20px;
}

/* line 105, ../../../app/stylesheets/homepage.scss */
#logo_home, #main-icon {
  width: 80%;
  margin: 0 auto;
}

/* line 110, ../../../app/stylesheets/homepage.scss */
#logo_home {
  margin-bottom: 38px;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-animation-duration: 1s;
  -webkit-animation-delay: 0.1s;
  -webkit-animation-timing-function: ease;
  -webkit-animation-fill-mode: both;
  -moz-animation-duration: 1s;
  -moz-animation-delay: 0.1s;
  -moz-animation-timing-function: ease;
  -moz-animation-fill-mode: both;
  -ms-animation-duration: 1s;
  -ms-animation-delay: 0.1s;
  -ms-animation-timing-function: ease;
  -ms-animation-fill-mode: both;
  animation-duration: 1s;
  animation-delay: 0.1s;
  animation-timing-function: ease;
  animation-fill-mode: both;
}

/* line 138, ../../../app/stylesheets/homepage.scss */
#main-icon {
  margin-bottom: 10px;
  -webkit-animation-duration: 1s;
  -webkit-animation-delay: 0.1s;
  -webkit-animation-timing-function: ease;
  -webkit-animation-fill-mode: both;
  -moz-animation-duration: 1s;
  -moz-animation-delay: 0.1s;
  -moz-animation-timing-function: ease;
  -moz-animation-fill-mode: both;
  -ms-animation-duration: 1s;
  -ms-animation-delay: 0.1s;
  -ms-animation-timing-function: ease;
  -ms-animation-fill-mode: both;
  animation-duration: 1s;
  animation-delay: 0.1s;
  animation-timing-function: ease;
  animation-fill-mode: both;
}

/* line 161, ../../../app/stylesheets/homepage.scss */
#header {
  background: none;
  background-color: #041021;
}

/* line 166, ../../../app/stylesheets/homepage.scss */
.signup_button {
  height: 45px;
  line-height: 45px;
  width: 280px;
  display: block;
  margin: 0 auto 20px;
  background: #f1d260;
  /* Old browsers */
  background: -moz-linear-gradient(top, #f1d260 0%, #efbf26 100%);
  /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f1d260), color-stop(100%, #efbf26));
  /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #f1d260 0%, #efbf26 100%);
  /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #f1d260 0%, #efbf26 100%);
  /* Opera11.10+ */
  background: -ms-linear-gradient(top, #f1d260 0%, #efbf26 100%);
  /* IE10+ */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f1d260', endColorstr='#efbf26',GradientType=0 );
  /* IE6-9 */
  background: linear-gradient(top, #f1d260 0%, #efbf26 100%);
  /* W3C */
  color: #5e501e;
  text-shadow: white 0 1px 1px;
  -moz-border-radius: 45px;
  -webkit-border-radius: 45px;
  -o-border-radius: 45px;
  -ms-border-radius: 45px;
  -khtml-border-radius: 45px;
  border-radius: 45px;
  text-decoration: none;
  border: 7px solid #273b52;
  -moz-box-shadow: #cbc5a1, 0, 0, 2px, inset;
  -webkit-box-shadow: #cbc5a1, 0, 0, 2px, inset;
  -o-box-shadow: #cbc5a1, 0, 0, 2px, inset;
  box-shadow: #cbc5a1, 0, 0, 2px, inset;
  text-transform: uppercase;
  font-weight: bold;
  position: relative;
  z-index: 20;
}
/* line 190, ../../../app/stylesheets/homepage.scss */
.signup_button:hover {
  color: #372f12;
  -moz-transform: scale(1.02, 1.02);
  -webkit-transform: scale(1.02, 1.02);
  -o-transform: scale(1.02, 1.02);
  -ms-transform: scale(1.02, 1.02);
  transform: scale(1.02, 1.02);
}

/* line 196, ../../../app/stylesheets/homepage.scss */
.features_columns {
  background-color: #041021;
  padding: 0 20px 48px;
}
/* line 199, ../../../app/stylesheets/homepage.scss */
.features_columns .columns {
  padding: 3%;
}

/* line 204, ../../../app/stylesheets/homepage.scss */
.FB_fan iframe {
  margin: 0 auto;
  width: 300px;
  margin-left: 14%;
}

/* line 210, ../../../app/stylesheets/homepage.scss */
.note_circle {
  width: 84px;
  height: 41px;
  margin: 20px auto 0;
  background: transparent url('/images/homepage/note-circle.png?1319722016') center bottom no-repeat;
}
/* ... */

